# Scout-REViewer-service

./: CHANGELOG.md  Dockerfile  README.md  cg.env.docker  docker-compose.yml  environment.yml  main.py  pyproject.toml
.github/workflows/: pull_request.yml  release.yml
service/: __init__.py  generate_svg.py  get_files.py  get_svg_as_string.py  get_versions.py  modify_svg.py  remove_files.py
service/utils/: get_root_path.py  get_tmp_data_path.py
tests/: test_main.py
tests/test_data/: example_svg.py
